fix: Centre-align contact form submit button.
Again. This markup changes so much.

--- a/themes/kelpie/assets/css/style-editor.css
+++ b/themes/kelpie/assets/css/style-editor.css
@@ -799,7 +799,8 @@ ol {
       border-color: #b32973; }
   .contact-form textarea {
     height: 16rem; }
-  .contact-form .contact-submit {
+  .contact-form .contact-submit,
+  .contact-form .wp-block-jetpack-button {
     text-align: center; }
 
 @media only screen and (min-width: 640px) {
