--- a/themes/kelpie/sass/blocks/_jetpack.scss
+++ b/themes/kelpie/sass/blocks/_jetpack.scss
@@ -34,7 +34,8 @@
 		height: 16rem;
 	}
 
-	.contact-submit {
+	.contact-submit,
+	.wp-block-jetpack-button {
 		text-align: center;
 	}
 }
